--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,11 @@
     color:white;
     font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: center;
+  animation: fadeIn 2s ease 2s 1 normal;
+    }
+    @keyframes fadeIn { 
+        0% {opacity: 0} 
+        100% {opacity: 1} 
  }
   .header img{
    height: 200px;
